feat: secure workers and compare results
